--- a/Homework 1/Homework 1.ipynb
+++ b/Homework 1/Homework 1.ipynb
@@ -226,7 +226,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2001-01-31 00:09:51.753600</td>\n",
+       "      <td>2001-01-31 00:01:58.540800</td>\n",
        "      <td>0.0657</td>\n",
        "      <td>-0.0490</td>\n",
        "      <td>0.0313</td>\n",
@@ -235,7 +235,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2001-02-28 00:09:50.198400</td>\n",
+       "      <td>2001-02-28 00:01:58.540800</td>\n",
        "      <td>-0.0074</td>\n",
        "      <td>0.1290</td>\n",
        "      <td>-0.1005</td>\n",
@@ -253,7 +253,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2001-04-30 00:09:51.753600</td>\n",
+       "      <td>2001-04-30 00:01:58.540800</td>\n",
        "      <td>0.0052</td>\n",
        "      <td>-0.0469</td>\n",
        "      <td>0.0794</td>\n",
@@ -275,10 +275,10 @@
       ],
       "text/plain": [
        "                        DATE     SMB     HML   MKTRF      RF     UMD\n",
-       "0 2001-01-31 00:09:51.753600  0.0657 -0.0490  0.0313  0.0054 -0.2506\n",
-       "1 2001-02-28 00:09:50.198400 -0.0074  0.1290 -0.1005  0.0038  0.1251\n",
+       "0 2001-01-31 00:01:58.540800  0.0657 -0.0490  0.0313  0.0054 -0.2506\n",
+       "1 2001-02-28 00:01:58.540800 -0.0074  0.1290 -0.1005  0.0038  0.1251\n",
        "2 2001-03-30 00:00:00.000000  0.0034  0.0645 -0.0726  0.0042  0.0835\n",
-       "3 2001-04-30 00:09:51.753600  0.0052 -0.0469  0.0794  0.0039 -0.0797\n",
+       "3 2001-04-30 00:01:58.540800  0.0052 -0.0469  0.0794  0.0039 -0.0797\n",
        "4 2001-05-31 00:00:00.000000  0.0260  0.0314  0.0072  0.0032  0.0212"
       ]
      },
@@ -465,7 +465,7 @@
      "output_type": "stream",
      "text": [
       "Stock's DATE format: 2008-01-31 00:00:00\n",
-      "RM's DATE format: 2001-01-31 00:09:51.753600\n"
+      "RM's DATE format: 2001-01-31 00:01:58.540800\n"
      ]
     }
    ],
@@ -670,12 +670,12 @@
     "**How we select sotcks:**\n",
     "1. We need to select stocks whose $\\beta$ closes to one, so we need to make sure the stocks' $\\beta$ which we gonna select are significant. As a result, we select stocks whose p value of $\\beta$ is smaller than 0.05.\n",
     "2. Then we pick stocks whose $\\beta$ lies between 0.9 and 1.1.\n",
-    "3. Finally, we sort the selected stocks in ascending and descending way according to each stock's $\\alpha$, and select top 25 five stocks sequentially to form low and high $\\alpha$ portfolio."
+    "3. Finally, we sort the selected stocks in ascending and descending way according to each stock's $\\alpha$, and select top 25 five stocks sequentially to form small and big $\\alpha$ portfolio."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 175,
    "metadata": {
     "scrolled": true
    },
@@ -699,8 +699,8 @@
     "print(\"Number of stocks after second filtration: \", len(stock_pool))\n",
     "\n",
     "# step 3\n",
-    "low_alpha = stock_pool.sort_values(\"const\", ascending=True).iloc[:25, ]\n",
-    "high_alpha =  stock_pool.sort_values(\"const\", ascending=False).iloc[:25, ]"
+    "small_alpha = stock_pool.sort_values(\"const\", ascending=True).iloc[:25, ]\n",
+    "big_alpha =  stock_pool.sort_values(\"const\", ascending=False).iloc[:25, ]"
    ]
   },
   {
@@ -714,12 +714,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Make a table to show the $\\alpha$ and $\\beta$ of the stocks you pick for these two portfolios with data from the 2008-2012 estimation period. Please include the standard deviations of your parameters as well."
+    "### 1. Make a table to show the $\\alpha$ and $\\beta$ of the stocks you pick for these two portfolios with data from the 2008-2012 estimation period. Please include the standard deviations of your parameters as well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Table for small alpha portfolio:**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -993,19 +1000,25 @@
        "87424  0 -0.018367  0.984148       0.020955      0.374513"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# table for low alpha portfolio \n",
-    "low_alpha[[\"const\", \"MKTRF\", \"const_std_err\", \"RIRF_std_err\"]]"
+    "small_alpha[[\"const\", \"MKTRF\", \"const_std_err\", \"RIRF_std_err\"]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Table for small alpha portfolio:**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -1279,160 +1292,155 @@
        "90353  0  0.024905  1.151533       0.011216      0.200459"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# table for low alpha portfolio \n",
-    "high_alpha[[\"const\", \"MKTRF\", \"const_std_err\", \"RIRF_std_err\"]]"
+    "big_alpha[[\"const\", \"MKTRF\", \"const_std_err\", \"RIRF_std_err\"]]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Please report the summary statistics of the returns on the two portfolios you constructed as well as the market portfolio (RM) and riskfree asset returns (RF). Use the sample period from 2008 to 2012 for this question. Some of the stocks might not have 5 year full history here, you are allowed to have a portfolio with less than 25 stocks for earlier months. What you need to present are mean, standard deviation, minimum, and maximum of the returns. Please note that RM = MKTRF + RF."
+    "### 2. Please report the summary statistics of the returns on the two portfolios you constructed as well as the market portfolio (RM) and riskfree asset returns (RF). Use the sample period from 2008 to 2012 for this question. Some of the stocks might not have 5 year full history here, you are allowed to have a portfolio with less than 25 stocks for earlier months. What you need to present are mean, standard deviation, minimum, and maximum of the returns. Please note that RM = MKTRF + RF."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Define function to deal with data:**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define function to shift MKTCAP\n",
+    "def shift_MKTCAP(data):\n",
+    "    data = data.copy()\n",
+    "    data.sort_values(\"DATE\", inplace=True)\n",
+    "    shifted_data = data.shift()\n",
+    "    selected_column = pd.DataFrame(shifted_data[\"MKTCAP\"])\n",
+    "    selected_column.rename(columns={\"MKTCAP\": \"LMKTCAP\"}, inplace=True)\n",
+    "    return pd.concat([data, selected_column], axis=1)\n",
+    "\n",
+    "# define finction to calculate weights\n",
+    "def calcuate_weight(data):\n",
+    "    weights = data[\"LMKTCAP\"] / sum(data[\"LMKTCAP\"])\n",
+    "    weights = pd.DataFrame(weights)\n",
+    "    weights.rename(columns={\"LMKTCAP\": \"WGT\"}, inplace=True)\n",
+    "    return pd.concat([data, weights], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Deal with small $\\alpha$ portfolio:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# create list for low alpha portfolio\n",
-    "low_alpha_list = low_alpha.index.get_level_values(0)\n",
+    "# create list for small alpha portfolio\n",
+    "small_alpha_list = small_alpha.index.get_level_values(0)\n",
     "\n",
-    "# create index to find stocks from \"Sample\" dataset for low alpha stocks\n",
-    "low_alpha_index = Sample.PERMNO.apply(\n",
-    "    lambda x: x in set(low_alpha.index.get_level_values(0))\n",
+    "# create index to find stocks from \"Sample\" dataset for small alpha stocks\n",
+    "small_alpha_index = Sample.PERMNO.apply(\n",
+    "    lambda x: x in set(small_alpha.index.get_level_values(0))\n",
     ")\n",
     "\n",
-    "# create dataset \"low_alpha_stocks\"\n",
-    "low_alpha_stocks = Sample[low_alpha_index]\n",
+    "# create dataset \"small_alpha_stocks\"\n",
+    "small_alpha_stocks = Sample[small_alpha_index]\n",
     "\n",
     "# create new column \"MKTCAP\" to store market cap\n",
-    "low_alpha_stocks = low_alpha_stocks.copy()\n",
-    "low_alpha_stocks[\"MKTCAP\"] = low_alpha_stocks[\"PRC\"] * low_alpha_stocks[\"SHROUT\"]"
+    "small_alpha_stocks = small_alpha_stocks.copy()\n",
+    "small_alpha_stocks[\"MKTCAP\"] = small_alpha_stocks[\"PRC\"] * small_alpha_stocks[\"SHROUT\"]\n",
+    "\n",
+    "# group small_alpha_stocks by \"PERMNO\" column, and apply \"shift_MKTCAP\" function to each group\n",
+    "small_alpha_stocks = small_alpha_stocks.groupby(\"PERMNO\").apply(\n",
+    "    lambda x:shift_MKTCAP(x)\n",
+    ")\n",
+    "\n",
+    "# ungroup small_alpha_stocks \n",
+    "# drop \"PERMNO\" column first, so it could put the group key \"PERMNO\" back to the column\n",
+    "small_alpha_stocks = small_alpha_stocks.drop(\"PERMNO\", axis=1).reset_index(level=False)\n",
+    "\n",
+    "# group small_alpha_stocks by \"DATE\" column, and apply \"calcuate_weight\" function to each group\n",
+    "small_alpha_stocks = small_alpha_stocks.dropna().groupby(\"DATE\").apply(lambda x: calcuate_weight(x))\n",
+    "\n",
+    "# calculate each stock's return according to its weight\n",
+    "small_alpha_stocks[\"VWPRet\"] = small_alpha_stocks[\"RET\"] *small_alpha_stocks[\"WGT\"]\n",
+    "\n",
+    "# calculate portfolio's return according to each time frame\n",
+    "small_alpha_return = small_alpha_stocks.groupby(\"DATE\").sum()[\"VWPRet\"]\n",
+    "small_alpha_return = pd.DataFrame(small_alpha_return)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calcuate_weight(data):\n",
-    "    weights = data[\"MKTCAP\"] / sum(data[\"MKTCAP\"])\n",
-    "    return sum(weights*data[\"RET\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "low_alpha_stocks.dropna(inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DATE\n",
-       "2008-01-31   -0.131800\n",
-       "2008-02-29    0.078065\n",
-       "2008-03-31   -0.033095\n",
-       "2008-04-30    0.022844\n",
-       "2008-05-30    0.016348\n",
-       "2008-06-30   -0.064557\n",
-       "2008-07-31    0.000710\n",
-       "2008-08-29    0.044479\n",
-       "2008-09-30   -0.015095\n",
-       "2008-10-31   -0.180822\n",
-       "2008-11-28   -0.081253\n",
-       "2008-12-31    0.039896\n",
-       "2009-01-30   -0.032630\n",
-       "2009-02-27   -0.159776\n",
-       "2009-03-31    0.100484\n",
-       "2009-04-30    0.121213\n",
-       "2009-05-29   -0.041920\n",
-       "2009-06-30    0.114212\n",
-       "2009-07-31    0.119289\n",
-       "2009-08-31    0.035465\n",
-       "2009-09-30    0.054246\n",
-       "2009-10-30    0.003545\n",
-       "2009-11-30    0.028107\n",
-       "2009-12-31    0.047882\n",
-       "2010-01-29   -0.078069\n",
-       "2010-02-26    0.075877\n",
-       "2010-03-31    0.049739\n",
-       "2010-04-30   -0.022189\n",
-       "2010-05-28   -0.112895\n",
-       "2010-06-30   -0.060572\n",
-       "2010-07-30    0.060790\n",
-       "2010-08-31   -0.161355\n",
-       "2010-09-30    0.097432\n",
-       "2010-10-29   -0.001618\n",
-       "2010-11-30   -0.003863\n",
-       "2010-12-31    0.011898\n",
-       "2011-01-31    0.077961\n",
-       "2011-02-28   -0.035468\n",
-       "2011-03-31   -0.055880\n",
-       "2011-04-29   -0.007182\n",
-       "2011-05-31   -0.073970\n",
-       "2011-06-30   -0.025586\n",
-       "2011-07-29   -0.036213\n",
-       "2011-08-31   -0.246478\n",
-       "2011-09-30   -0.132833\n",
-       "2011-10-31    0.178078\n",
-       "2011-11-30    0.042397\n",
-       "2011-12-30   -0.063201\n",
-       "2012-01-31    0.078263\n",
-       "2012-02-29   -0.089733\n",
-       "2012-03-30   -0.052963\n",
-       "2012-04-30    0.033963\n",
-       "2012-05-31   -0.084142\n",
-       "2012-06-29   -0.091732\n",
-       "2012-07-31   -0.094686\n",
-       "2012-08-31   -0.068203\n",
-       "2012-09-28    0.022086\n",
-       "2012-10-31   -0.167704\n",
-       "2012-11-30   -0.058975\n",
-       "2012-12-31    0.100740\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "low_alpha_stocks.groupby(\"DATE\").apply(lambda x:calcuate_weight(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Please proceed with the stocks you picked to construct those two portfolios for the 2013-2017 period. Report your portfolio $\\alpha$ and $\\beta$ for this period and discuss whether your ® is still significant and whether your ¯ remains insignificantly different from 1 for each portfolio."
+    "**Deal with big 𝛼 portfolio:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create list for big alpha portfolio\n",
+    "big_alpha_list = big_alpha.index.get_level_values(0)\n",
+    "\n",
+    "# create index to find stocks from \"Sample\" dataset for big alpha stocks\n",
+    "big_alpha_index = Sample.PERMNO.apply(\n",
+    "    lambda x: x in set(big_alpha.index.get_level_values(0))\n",
+    ")\n",
+    "\n",
+    "# create dataset \"big_alpha_stocks\"\n",
+    "big_alpha_stocks = Sample[big_alpha_index]\n",
+    "\n",
+    "# create new column \"MKTCAP\" to store market cap\n",
+    "big_alpha_stocks = big_alpha_stocks.copy()\n",
+    "big_alpha_stocks[\"MKTCAP\"] = big_alpha_stocks[\"PRC\"] * big_alpha_stocks[\"SHROUT\"]\n",
+    "\n",
+    "# group big_alpha_stocks by \"PERMNO\" column, and apply \"shift_MKTCAP\" function to each group\n",
+    "big_alpha_stocks = big_alpha_stocks.groupby(\"PERMNO\").apply(\n",
+    "    lambda x:shift_MKTCAP(x)\n",
+    ")\n",
+    "\n",
+    "# ungroup big_alpha_stocks \n",
+    "# drop \"PERMNO\" column first, so it could put the group key \"PERMNO\" back to the column\n",
+    "big_alpha_stocks = big_alpha_stocks.drop(\"PERMNO\", axis=1).reset_index(level=False)\n",
+    "\n",
+    "# group big_alpha_stocks by \"DATE\" column, and apply \"calcuate_weight\" function to each group\n",
+    "big_alpha_stocks = big_alpha_stocks.dropna().groupby(\"DATE\").apply(lambda x: calcuate_weight(x))\n",
+    "\n",
+    "# calculate each stock's return according to its weight\n",
+    "big_alpha_stocks[\"VWPRet\"] = big_alpha_stocks[\"RET\"] *big_alpha_stocks[\"WGT\"]\n",
+    "\n",
+    "# calculate portfolio's return according to each time frame\n",
+    "big_alpha_return = big_alpha_stocks.groupby(\"DATE\").sum()[\"VWPRet\"]\n",
+    "big_alpha_return = pd.DataFrame(big_alpha_return)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Please proceed with the stocks you picked to construct those two portfolios for the 2013-2017 period. Report your portfolio $\\alpha$ and $\\beta$ for this period and discuss whether your $\\alpha$ is still significant and whether your $\\beta$ remains insignificantly different from 1 for each portfolio."
    ]
   },
   {
