--- a/Homework 1/Homework 1.ipynb
+++ b/Homework 1/Homework 1.ipynb
@@ -2117,7 +2117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the table and figure above, we can find that small $\\alpha$ portfolio is more volatile than market portfolio, and its average return is also higher than market portfolio, which exceed our expectation."
+    "From the table and figure above, we can find that small $\\alpha$ portfolio is more volatile(significantly, see hypothesis testing in question 3) than market portfolio, and its average return is also higher than market portfolio, which exceed our expectation."
    ]
   },
   {
@@ -2257,7 +2257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the table and figure above, we can find that big 𝛼 portfolio is more volatile than market portfolio, and its average return is smaller than market portfolio, which exceed our expectation."
+    "From the table and figure above, we can find that big 𝛼 portfolio seems more volatile(but insignificantly, see hypothesis testing in question 3) than market portfolio, and its average return is smaller than market portfolio, which exceed our expectation."
    ]
   },
   {
@@ -2354,10 +2354,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We didn't get the benefit from the big $\\alpha$ portfolio, its average return is smaller than market portfolio. Although big $\\alpha$ portfolio's risk-adjusted abnormal return is significantly bigger than 0 in 2008~2012. However, past performance doesn't guarantee future performance, because both $\\alpha$ and $\\beta$ will change with time.\n",
-    "\n",
-    "\n",
-    "(From the section of hypothesis testing above, we can find that big $\\alpha$ portfolio's return is insignificantly different(under 95% confidence level) from the volatility of market portfolio's return after 2013. However, if we decrease confidence level to 90%, then this portfolio's $\\beta$ will become significantly different from 1, in this case 1.29, which means this portfolio's return is more volatile than market portfolio's return after 2013(under 90% confidence level).) (beta不等於1時，報酬可高於或高於市場投組，而低報酬多過於市場投組時表現就很差)"
+    "We didn't get the benefit from the big $\\alpha$ portfolio, its average return is smaller than market portfolio. Although big $\\alpha$ portfolio's risk-adjusted abnormal return is significantly bigger than 0 in 2008~2012. However, past performance doesn't guarantee future performance, because both $\\alpha$ and $\\beta$ might change with time."
    ]
   },
   {
@@ -2368,11 +2365,120 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Summary statistics for long-short strategy portfolio in different time frame:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Long and short portfolio (2008~2012)</th>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.042937</td>\n",
+       "      <td>0.079057</td>\n",
+       "      <td>-0.150703</td>\n",
+       "      <td>-0.000335</td>\n",
+       "      <td>0.037299</td>\n",
+       "      <td>0.098977</td>\n",
+       "      <td>0.246677</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Long and short portfolio (2013~2017)</th>\n",
+       "      <td>60.0</td>\n",
+       "      <td>-0.011096</td>\n",
+       "      <td>0.080377</td>\n",
+       "      <td>-0.198380</td>\n",
+       "      <td>-0.064572</td>\n",
+       "      <td>-0.009074</td>\n",
+       "      <td>0.054169</td>\n",
+       "      <td>0.160524</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      count      mean       std       min  \\\n",
+       "Long and short portfolio (2008~2012)   60.0  0.042937  0.079057 -0.150703   \n",
+       "Long and short portfolio (2013~2017)   60.0 -0.011096  0.080377 -0.198380   \n",
+       "\n",
+       "                                           25%       50%       75%       max  \n",
+       "Long and short portfolio (2008~2012) -0.000335  0.037299  0.098977  0.246677  \n",
+       "Long and short portfolio (2013~2017) -0.064572 -0.009074  0.054169  0.160524  "
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# select data which lie between 2008/01/01 and 2012/12/31\n",
+    "date_start = datetime.strptime(\"2008/01/01\", \"%Y/%m/%d\").date()\n",
+    "date_end = datetime.strptime(\"2017/12/31\", \"%Y/%m/%d\").date()\n",
+    "\n",
+    "small_temp_result = small_alpha_result[(small_alpha_result.DATE > date_start) & \n",
+    "                                       (small_alpha_result.DATE <= date_end)]\n",
+    "\n",
+    "big_temp_result = big_alpha_result[(big_alpha_result.DATE > date_start) & \n",
+    "                                (big_alpha_result.DATE <= date_end)]\n",
+    "\n",
+    "# calculate return of long and short strategy\n",
+    "long_short_result = big_temp_result[\"VWPRet\"] - small_temp_result[\"VWPRet\"]\n",
+    "\n",
+    "# prepare statistics for long-short strategy portfolio\n",
+    "long_short_result_early = pd.DataFrame(long_short_result.iloc[:60, ].describe())\n",
+    "long_short_result_early.columns = [\"Long and short portfolio (2008~2012)\"]\n",
+    "\n",
+    "long_short_result_later = pd.DataFrame(long_short_result.iloc[60:, ].describe())\n",
+    "long_short_result_later.columns = [\"Long and short portfolio (2013~2017)\"]\n",
+    "\n",
+    "pd.concat([long_short_result_early.T, long_short_result_later.T])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the table above, we got an average return of -1.11% from long-short strategy during 2013~2017, which means we didn't receive \"excess return\" from this strategy. Because small $\\alpha$ portfolio's return is actually higher than big $\\alpha$ portfolio's return(see question 4). It means if we short small $\\alpha$ portfolio, we are definitely going to receive negative return from long-short strategy. This shows once again that past performance doesn't guarantee future performance."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2386,7 +2492,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "  "
+   ]
   },
   {
    "cell_type": "markdown",
