--- a/Homework 1/Homework 1.ipynb
+++ b/Homework 1/Homework 1.ipynb
@@ -2629,7 +2629,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From above two tables, we can find that the return of long-short strategy portfolio is 0.078% in 2013~2017. However, market portfolio's return is 1.28% (from answer of question 4) in the same time, which means we aren't getting excess return from this strategy. We also provide hypothesis testing to test whether this \"excess return\" is sigificantly different from 0. We define return of long-short strategy as $\\gamma$, under 95% confidence level, null hypothesis and alternative hypothesis for $\\gamma$:\n",
+    "From above two tables, we can find that the return of long-short strategy portfolio is 0.078% in 2013~2017. However, market portfolio's return is 1.28% (from answer of question 4) in the same time, which means we aren't getting excess return from this strategy. We also provide hypothesis testing to test whether this \"excess return\" is significantly different from 0. We define return of long-short strategy as $\\gamma$, under 95% confidence level, null hypothesis and alternative hypothesis for $\\gamma$:\n",
     "\n",
     "${H_0}$ : $\\gamma$ = 0\n",
     "\n",
