fixing markdown typo

--- a/Homework 1/Homework 1.ipynb
+++ b/Homework 1/Homework 1.ipynb
@@ -693,12 +693,7 @@
    "metadata": {},
    "source": [
     "**How we select sotcks:**\n",
-    "1. We need to select stocks whose $\\beta$ closes to one, so we need to make sure the stocks' $\\beta$ which we gonna select are insignificant different from 1. As a result, we provide hypothesis testing to test whether each stock's $\\beta$ is insignificant different from 1 in 2008~2012. Under 95% confidence level, null hypothesis and alternative hypothesis for $\\beta$:\n",
-    "\n",
-    "<center>${H_0}$ : $\\beta$ = 1\n",
-    "\n",
-    "<center>${H_1}$ : $\\beta$ $\\neq$ 1\n",
-    "\n",
+    "1. We need to select stocks whose $\\beta$ closes to one, so we need to make sure the stocks' $\\beta$ which we gonna select are insignificant different from 1. As a result, we provide hypothesis testing to test whether each stock's $\\beta$ is insignificant different from 1 in 2008~2012. Under 95% confidence level, null hypothesis and alternative hypothesis for $\\beta$:${H_0}$ : $\\beta$ = 1,${H_1}$ : $\\beta$ $\\neq$ 1\n",
     "2. Then we pick stocks whose $\\beta$ lie between 0.8 and 1.2.\n",
     "3. Finally, we sort the selected stocks in ascending and descending way according to each stock's $\\alpha$, and select top 25 stocks sequentially to form small and big $\\alpha$ portfolio."
    ]
