fix typo found by classmate

--- a/Homework 1/Homework 1.ipynb
+++ b/Homework 1/Homework 1.ipynb
@@ -2155,7 +2155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the table and figure above, we can find that small $\\alpha$ portfolio is more volatile(significantly, see hypothesis testing in question 3) than market portfolio, and its average return is also higher than market portfolio, which exceed our expectation."
+    "From the table and figure above, we can find that small $\\alpha$ portfolio is more volatile(significantly, see hypothesis testing in question 3) than market portfolio, and its average return is lower than market portfolio, which seems to meet our expectation."
    ]
   },
   {
@@ -2295,7 +2295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the table and figure above, we can find that big 𝛼 portfolio seems more volatile(but insignificantly, see hypothesis testing in question 3) than market portfolio, and its average return is smaller than market portfolio, which exceed our expectation."
+    "From the table and figure above, we can find that big 𝛼 portfolio seems more volatile(but insignificantly, see hypothesis testing in question 3) than market portfolio, and its average return is bigger than market portfolio, which seems to meet our expectation."
    ]
   },
   {
@@ -2392,7 +2392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although big $\\alpha$ portfolio's return (1.75%) is higher than market portfolio's return (1.28%), but we think this result actually stems from godd luck. Beacause the risk-adjusted abnormal return of big $\\alpha$ portfolio is insignificantly different from 0 (see hypothesis testing in question 3), which means from the view of statistics we don't actually having risk-adjusted abnormal return."
+    "Although big $\\alpha$ portfolio's return (1.75%) is higher than market portfolio's return (1.28%), but we think this result actually stems from good luck. Beacause the risk-adjusted abnormal return of big $\\alpha$ portfolio is insignificantly different from 0 (see hypothesis testing in question 3), which means from the view of statistics we don't actually having risk-adjusted abnormal return."
    ]
   },
   {
@@ -2630,7 +2630,7 @@
     "\n",
     "${H_1}$ : $\\gamma$ $\\neq$ 0\n",
     "\n",
-    "From the table above, we can find that under 95% confidence level, $\\gamma$ isn't significantly different from 0. From the hypothesis testing, it once again confirm that we aren't actually getting \"excess return\" from long-short strategy.This shows that past performance doesn't guarantee future performance. However, if this strategy could be implied(actually we couldn't, it means we are using future data) in 2008~2012, then we could get a return of 5.97% which is higher than market return 0.34% (from answer of question 2)."
+    "From the table above, we can find that under 95% confidence level, $\\gamma$ isn't significantly different from 0. From the hypothesis testing, it once again confirm that we aren't actually getting \"excess return\" from long-short strategy.This shows that past performance doesn't guarantee future performance. However, if this strategy could be executed(actually we couldn't, it means we are using future data) in 2008~2012, then we could get a return of 5.97% which is higher than market return 0.34% (from answer of question 2)."
    ]
   },
   {
