--- a/Homework 1/Homework 1.ipynb
+++ b/Homework 1/Homework 1.ipynb
@@ -1373,7 +1373,7 @@
     "    selected_column.rename(columns={\"MKTCAP\": \"LMKTCAP\"}, inplace=True)\n",
     "    return pd.concat([data, selected_column], axis=1)\n",
     "\n",
-    "# define finction to calculate weights\n",
+    "# define function to calculate weights\n",
     "def calcuate_weight(data):\n",
     "    weights = data[\"LMKTCAP\"] / sum(data[\"LMKTCAP\"])\n",
     "    weights = pd.DataFrame(weights)\n",
