--- a/Homework 2/Homework 2.ipynb
+++ b/Homework 2/Homework 2.ipynb
@@ -6,7 +6,6 @@
    "source": [
     "**Process:**\n",
     "* Load and check data\n",
-    "* Data preprocess (2 datasets)\n",
     "* Answer each question (6 in total)\n",
     " \n",
     "**Notations:**\n",
@@ -853,7 +852,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. CAPM vs Fama French → test \"SMB\", \"HML\""
+    "* CAPM vs Fama French → test \"SMB\", \"HML\""
    ]
   },
   {
@@ -916,7 +915,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Fama French vs Carhart → test \"UMD\""
+    "* Fama French vs Carhart → test \"UMD\""
    ]
   },
   {
@@ -979,7 +978,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. CAPM vs Carhart → test \"SMB\", \"HML\", \"UMD\""
+    "* CAPM vs Carhart → test \"SMB\", \"HML\", \"UMD\""
    ]
   },
   {
@@ -1253,7 +1252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. CAPM vs Fama French → test \"SMB\" & \"HML\""
+    "* CAPM vs Fama French → test \"SMB\" & \"HML\""
    ]
   },
   {
@@ -1314,7 +1313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Fama French vs Carhart → test \"UMD\""
+    "* Fama French vs Carhart → test \"UMD\""
    ]
   },
   {
@@ -1375,7 +1374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. CAPM vs Carhart → test \"SMB\", \"HML\", \"UMD\""
+    "* CAPM vs Carhart → test \"SMB\", \"HML\", \"UMD\""
    ]
   },
   {
@@ -1443,14 +1442,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**First,we need to test whether two population variance are the same or not, if both variance are the same then we can run chow test.**"
+    "**Actually, we need to test whether two populations' variance are the same, if both variance are the same then we can run chow test, otherwise we can't use chow test. However, we didn't check two populations' variance here, which means we assume two populations' variance are the same.**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Deal with small $\\alpha$** (using CAPM)"
+    "**Deal with small $\\alpha$ (using CAPM)**"
    ]
   },
   {
@@ -1531,7 +1530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Deal with big $\\alpha$** (using Fama French)"
+    "**Deal with big $\\alpha$ (using Fama French)**"
    ]
   },
   {
@@ -2081,7 +2080,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. CAPM vs Fama_French"
+    "* CAPM vs Fama_French"
    ]
   },
   {
@@ -2156,7 +2155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. CAPM vs Carhart"
+    "* CAPM vs Carhart"
    ]
   },
   {
@@ -2230,7 +2229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Fama_French vs Carhart"
+    "* Fama_French vs Carhart"
    ]
   },
   {
@@ -2491,7 +2490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. CAPM vs Fama_French"
+    "* CAPM vs Fama_French"
    ]
   },
   {
@@ -2566,7 +2565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. CAPM vs Carhart"
+    "* CAPM vs Carhart"
    ]
   },
   {
@@ -2638,7 +2637,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Fama_French vs Carhart"
+    "* Fama_French vs Carhart"
    ]
   },
   {
